<resources>
    <string name="app_name">AplicacionCitasMedicas</string>
    <string name="btn_ToCamera">Camara</string>
    <string name="txt_ToCamera">Prueba Camara</string>
    <string name="txt_mainTitle">Mis Medicamentos</string>
    <string name="txt_addMedTitle">Agregar nuevo medicamento</string>
    <string name="txt_medNombre">Nombre del medicamento</string>
    <string name="txt_medDosis">Dosis</string>
    <string name="txt_medDescripcion">Descripcion (opcional)</string>
    <string name="txt_medFrecuencia">Frecuencia</string>
    <string name="txt_medDiaria">Diaria</string>
    <string name="txt_medSemanal">Semanal</string>
    <string name="txt_medMensual">Mensual</string>
    <string name="txt_medDiaSemana">Dia de la semana</string>
    <string name="txt_medHoraRecordatorio">Hora del recordatorio</string>
    <string name="txt_medHoraSeleccion">Hora del recordatorio</string>
    <string name="txt_medEscanerQR">Escanear codigo del medicamento</string>
    <string name="txt_medEscanerAbrir">Abrir camara</string>
    <string name="txt_medGuardarMed">Guardar medicamento</string>
    <string name="txt_medSigFecha">Siguiente dosis</string>
    <string name="txt_guardar">Guardar</string>
    <string name="txt_Hora">Hora</string>
    <string name="txt_codigoScan">Codigo escaneado: %1$s</string>
    <string name="btn_back">Volver</string>
    <string name="tv_TomarMed">¡Toma tu medicamento!</string>
    <string name="txt_recordatorioNombreMed">Nombre: %1$s</string>
    <string name="txt_recordatorioDosisMed">Dosis: %1$s</string>
    <string name="txt_recordatorioHoraMed">Hora: %1$s</string>

    <!-- PERMISOS -->
    <string name="imglogo">logo</string>
    <string name="texNombre">MEDISCAN</string>
    <string name="texBienvenida">¡BIENVENID@!</string>
    <string name="texDescripcion">Necesitamos algunos permisos para que la app funcione correctamente</string>
    <!-- PERMISOS NOTIFICACION -->
    <string name="texNotificacion">Permiso de notificaciones</string>
    <string name="texNotidescripcion">Necesario para avisarte que llego la hora de tomar el medicamento</string>
    <string name="imgNotificacion">logo</string>
    <!-- PERMISOS RECORDATORIOS -->
    <string name="texRecordatorio">Permiso de alarmas y recordatorios</string>
    <string name="texRecodescripcion">Necesario para recordarte que pronto llegara la hora de tomar el medicamento</string>
    <string name="imgRecordatorio">logo</string>
    <!-- PERMISOS CAMARA -->
    <string name="texCamara">Permiso para acceder a la camara</string>
    <string name="texDescamara">Necesario para registrar el codigo de barras que se encuentra en la caja o tableta del medicamento</string>
    <string name="imgCamara">logo</string>
    <!-- BOTONES -->
    <string name="btnConceder">CONCEDER PERMISOS</string>
    <string name="btnOmitir">OMITIR</string>




</resources>
