<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:clickable="true"
    tools:context=".AgregarMedActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:background="@android:color/darker_gray"
        android:gravity="left|center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/agr_btnVolverMenu"
            android:layout_width="15dp"
            android:layout_height="29dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:background="@drawable/icon_arrowleft" />

        <TextView
            android:id="@+id/agr_txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/txt_addMedTitle"
            android:textSize="25sp"
            android:layout_weight="1"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/agr_edtxtNombreMed"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/txt_medNombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/agr_txtNombreMed"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/agr_txtlabelFreq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_medFrecuencia" />


        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/agr_btnDia"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/txt_medDiaria" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/agr_btnSemana"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/txt_medSemanal" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/agr_btnMes"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/txt_medMensual" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/agr_txtlabelDiaSemana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_medDiaSemana" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/agr_btnL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textOff="L"
                android:textOn="L" />

            <ToggleButton
                android:id="@+id/agr_btnM"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textOff="M"
                android:textOn="M" />

            <ToggleButton
                android:id="@+id/agr_btnX"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textOff="X"
                android:textOn="X" />

            <ToggleButton
                android:id="@+id/agr_btnJ"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textOff="J"
                android:textOn="J" />

            <ToggleButton
                android:id="@+id/agr_btnV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textOff="V"
                android:textOn="V" />

            <ToggleButton
                android:id="@+id/agr_btnS"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textOff="S"
                android:textOn="S" />

            <ToggleButton
                android:id="@+id/agr_btnD"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textOff="D"
                android:textOn="D" />
        </LinearLayout>


        <TextView
            android:id="@+id/agr_txtlabelHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_medHoraRecordatorio" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/agr_btnHora"
            style="@style/CustomBorderButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="20dp"
            android:text="00:00" />

        <TextView
            android:id="@+id/agr_txtlabelQR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_medEscanerQR" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/agr_btnAbrirCamara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="20dp"
            android:text="@string/txt_medEscanerAbrir" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/agr_btnGuardar"
        android:layout_width="369dp"
        android:layout_height="65dp"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_medGuardarMed"
        android:drawableLeft="@drawable/icon_arrowdown"
        android:drawableRight="@drawable/icon_arrowdown"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>